--- a/FinancialAid/Base.lproj/Main.storyboard
+++ b/FinancialAid/Base.lproj/Main.storyboard
@@ -32,9 +32,6 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="k7O-jo-6Bd" kind="show" identifier="FormOptionSegue" id="kQM-0h-lVN"/>
-                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -43,12 +40,15 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="北大学生资助中心" id="4Id-3F-t8M"/>
+                    <connections>
+                        <segue destination="k7O-jo-6Bd" kind="show" identifier="FormOptionSegue" id="fVt-Wo-jcx"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9XC-4z-466" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1476" y="-824"/>
         </scene>
-        <!--Form Option Table View Controller-->
+        <!--表格-->
         <scene sceneID="8oU-FF-Jen">
             <objects>
                 <tableViewController hidesBottomBarWhenPushed="YES" id="k7O-jo-6Bd" customClass="FormOptionTableViewController" customModule="FinancialAid" customModuleProvider="target" sceneMemberID="viewController">
@@ -57,28 +57,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FormGuideTableViewCell" textLabel="68D-zr-xaQ" rowHeight="50" style="IBUITableViewCellStyleDefault" id="91a-an-7N3">
-                                <rect key="frame" x="0.0" y="92" width="600" height="50"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="91a-an-7N3" id="zTe-o7-NCC">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="49"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="填表指引" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="68D-zr-xaQ">
-                                            <rect key="frame" x="15" y="0.0" width="570" height="49"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="Gox-aM-BjW" kind="show" identifier="FormGuideSegue" id="Vpj-CD-BCc"/>
-                                </connections>
-                            </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FormFillTableViewCell" textLabel="ILb-AG-6Rd" rowHeight="50" style="IBUITableViewCellStyleDefault" id="1y7-JF-oh4">
-                                <rect key="frame" x="0.0" y="142" width="600" height="50"/>
+                                <rect key="frame" x="0.0" y="92" width="600" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1y7-JF-oh4" id="cKj-BF-Gun">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="49"/>
@@ -93,12 +73,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="Gox-aM-BjW" kind="show" identifier="FormFillSegue" id="avw-X4-vUc"/>
-                                </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PDFTableViewCell" textLabel="FKZ-n7-87x" rowHeight="50" style="IBUITableViewCellStyleDefault" id="QEP-nq-KO6">
-                                <rect key="frame" x="0.0" y="192" width="600" height="50"/>
+                                <rect key="frame" x="0.0" y="142" width="600" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QEP-nq-KO6" id="AL6-hE-9kF">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="49"/>
@@ -115,7 +92,7 @@
                                 </tableViewCellContentView>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="UploadImageTableViewCell" textLabel="bbD-vX-KWG" rowHeight="50" style="IBUITableViewCellStyleDefault" id="NDl-EN-PFP">
-                                <rect key="frame" x="0.0" y="242" width="600" height="50"/>
+                                <rect key="frame" x="0.0" y="192" width="600" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NDl-EN-PFP" id="lu4-Dm-h20">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="49"/>
@@ -138,10 +115,19 @@
                             <outlet property="delegate" destination="k7O-jo-6Bd" id="Fbn-fs-VVX"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="表格" id="euq-iW-RzQ">
+                        <barButtonItem key="rightBarButtonItem" image="fill_form_guide" id="AeE-JX-FS1">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="Gox-aM-BjW" kind="show" identifier="FormGuideSegue" id="KXJ-Bt-xbx"/>
+                        <segue destination="Gox-aM-BjW" kind="show" identifier="FormFillSegue" id="0JO-CT-wVM"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O8t-Iu-AgC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2264" y="-824"/>
+            <point key="canvasLocation" x="2202" y="-824"/>
         </scene>
         <!--填写表格-->
         <scene sceneID="svU-4t-H0e">
@@ -159,9 +145,18 @@
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </webView>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" misplaced="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="YkW-GZ-4Ay">
+                                <rect key="frame" x="0.0" y="64" width="600" height="4"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="4" id="jIl-Kh-mMM"/>
+                                </constraints>
+                            </progressView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="YkW-GZ-4Ay" secondAttribute="trailing" constant="-20" id="6ez-5k-sbg"/>
+                            <constraint firstItem="YkW-GZ-4Ay" firstAttribute="leading" secondItem="Odw-fF-Dsy" secondAttribute="leadingMargin" constant="-20" id="9Yb-DO-Il9"/>
+                            <constraint firstItem="YkW-GZ-4Ay" firstAttribute="top" secondItem="ttV-lv-jfi" secondAttribute="bottom" id="YWQ-5t-Odw"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Ndc-TL-kHl" secondAttribute="trailing" constant="-20" id="aKX-WO-fc1"/>
                             <constraint firstItem="Ndc-TL-kHl" firstAttribute="leading" secondItem="Odw-fF-Dsy" secondAttribute="leadingMargin" constant="-20" id="h31-TA-Ugm"/>
                             <constraint firstAttribute="bottomMargin" secondItem="Ndc-TL-kHl" secondAttribute="bottom" id="pPc-oo-kos"/>
@@ -170,6 +165,7 @@
                     </view>
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="progressView" destination="YkW-GZ-4Ay" id="erf-5z-kiv"/>
                         <outlet property="webView" destination="Ndc-TL-kHl" id="kt8-vl-4rn"/>
                     </connections>
                 </viewController>
@@ -301,10 +297,72 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="北大学生资助中心" id="5bY-x4-1D4"/>
+                    <connections>
+                        <segue destination="xv9-pX-4uw" kind="show" identifier="EditProfileSegue" id="bDd-9I-a9L"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tyy-XW-MiT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1438" y="-1"/>
+            <point key="canvasLocation" x="1476" y="-1"/>
+        </scene>
+        <!--Edit Profile Table View Controller-->
+        <scene sceneID="Gee-tz-7nF">
+            <objects>
+                <tableViewController id="xv9-pX-4uw" customClass="EditProfileTableViewController" customModule="FinancialAid" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Nb9-W8-emo">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="6P3-D2-X6i">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6P3-D2-X6i" id="tql-dd-vfH">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="xv9-pX-4uw" id="XaY-b2-fYg"/>
+                            <outlet property="delegate" destination="xv9-pX-4uw" id="W9H-Yx-pH5"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="geJ-Fl-MIR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2202" y="-1"/>
+        </scene>
+        <!--Login Table View Controller-->
+        <scene sceneID="u0Y-sn-dl0">
+            <objects>
+                <tableViewController id="cAr-B3-0go" customClass="LoginTableViewController" customModule="FinancialAid" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="zHD-Ny-IWF">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="5ig-nD-SR2">
+                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5ig-nD-SR2" id="DWT-X2-gZQ">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="cAr-B3-0go" id="qpu-SY-Azs"/>
+                            <outlet property="delegate" destination="cAr-B3-0go" id="P1S-pN-iZX"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <segue destination="hEb-YR-3n7" kind="presentation" identifier="HomepageSegue" id="Qae-IM-q9M"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Xl-rX-p6R" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-804" y="-331"/>
         </scene>
         <!--北大学生资助中心-->
         <scene sceneID="Opi-yX-Fhq">
@@ -323,7 +381,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4oN-PE-w6o" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-91" y="-331"/>
+            <point key="canvasLocation" x="-82" y="-331"/>
         </scene>
         <!--填表-->
         <scene sceneID="B9D-tM-cEp">
@@ -377,11 +435,12 @@
     <resources>
         <image name="change_pwd" width="28" height="28"/>
         <image name="default_portrait" width="72" height="72"/>
+        <image name="fill_form_guide" width="22" height="22"/>
         <image name="logout" width="28" height="28"/>
         <image name="tab_form" width="28" height="28"/>
         <image name="tab_user" width="28" height="28"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Vpj-CD-BCc"/>
+        <segue reference="0JO-CT-wVM"/>
     </inferredMetricsTieBreakers>
 </document>
